# RLM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: 01_rlm_deep_dive.md  02_repl_explained.md  04_implementation_plan.md  05_novel_research_ideas.md  06_training_pipeline_audit.md  README.md  RLM_Overview.md  code-setup.md  dev_log.md  experiment.md  how-it-works.md  implementation_plan.md  index.html  index.md  project_info.md  research-notes.html  tasks.md  why-rlms.md
docs/css/: style.css
docs/implementation/: hardware.md  plan.md
docs/js/: main.js
docs/progress/: tasks.md
docs/research/: findings.md  novel-ideas.md
docs/stylesheets/: extra.css
experiments/: test_document.txt
frontend/: index.html
prompts/: rlm_system.txt
scripts/: build_sft_dataset.py  eval_sft.py  plot_results.py  run_comparison.py  run_niah.py  run_viz.py  smoke_test.py  train_sft.py  view_results.py
src/baseline/: __init__.py  vanilla_llm.py
src/benchmarks/: __init__.py  long_doc_qa.py  niah.py
src/comparison/: __init__.py  eval.py  runner.py
src/rlm/: __init__.py  repl.py  rlm_repl.py  viz_engine.py
src/rlm/clients/: __init__.py  base.py  ollama.py
src/training/: __init__.py  muon.py
