[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm"
version = "0.1.0"
description = "LLM vs RLM comparison framework — local, reproducible, Ollama-based"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "httpx>=0.27.0",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["rlm", "baseline", "benchmarks", "comparison", "training"]
